# sfdt

./: package-lock.json  package.json
migrations/2023-10-05-020850_create_user/: up.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  db.rs  oauth.rs  server.rs  service.rs  sf.rs
src-tauri/src/db/: models.rs  schema.rs
src-tauri/src/sf/: api.rs  auth.rs  mod.rs  oauth_handler.rs  url.rs
